# AVE6_project

./: .gitignore  README.md  README_other.md  TestplanwithRTK.xlsx  calibration.fbx  carissma.rviz  copy_files.py  distort.py  getting_actor.py  pr_nuscenes.ipynb  project_test.ipynb  requirements.txt  rgb_camera_point_cloud_marker.rviz  rosbag_to_img.py  sample_markers.py
RVIZ/: compare_images.rviz  (+3 more)
catkin_ws/src/my_robot_controller/: package.xml
catkin_ws/src/my_robot_controller/scripts/: draw_circle.py  img_subscriber.py  my_first_node.py
monocam_3D_object_detection/: CMakeLists.txt  package.xml
monocam_3D_object_detection/src/: carissma_tf_caminfo_broadcaster.py  img_publisher.py  img_subscriber.py  mono3d_det_node.py  run_inference.py
monocam_3D_object_detection/src/dd3d/: benchmark.py  custom_infer.py  extract_config.py  test.py
monocam_3D_object_detection/src/dd3d/configs/: defaults.yaml
monocam_3D_object_detection/src/dd3d/configs/experiments/: dd3d_kitti_v99.yaml  dd3d_nusc_dla34_custom.yaml
monocam_3D_object_detection/src/dd3d/configs/feature_extractors/: omninet_big.yaml  omninet_small.yaml
monocam_3D_object_detection/src/dd3d/configs/models/: depth_head.yaml
monocam_3D_object_detection/src/dd3d/scripts/: custom.py  train.py  visualize_dataloader.py
monocam_3D_object_detection/src/launch/: carissma.launch  carla_sample.launch  carla_testTrack.launch  carla_testTrack_demo.launch  project_launch.launch  project_launch_firstBag.launch
monocam_3D_object_detection/src/rviz/: carissma.rviz  carla_sample.rviz  carla_testTrack.rviz  rgb_camera_point_cloud_marker.rviz
(+236 files in other folders)
